# roXac

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  cryptography.md  design.md  development.md  index.md  installation.md  roadmap.md  usage.md
src/roxac/: __init__.py  auth.py  calc.py  cli.py  config.py  constants.py  crypto.py  exceptions.py  history.py
tests/: test_auth.py  test_calc.py  test_cli.py  test_config.py  test_crypto.py  test_history.py
